force-app/main/default/objects/Employee__c/fields/Base_Pay_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Base_Pay_Schedule__c</fullName>
    <label>Base Pay Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>