force-app/main/default/objects/Employee__c/fields/Bonus_Pay_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Pay_Schedule__c</fullName>
    <label>Bonus Pay Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>