force-app/main/default/objects/Employee__c/fields/Employee_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Employee_End_Date__c</fullName>
    <label>Employee End Date</label>
    <type>Date</type>
</CustomField>