force-app/main/default/objects/Employee__c/fields/Expense_Account__c.field-meta.xml
<CustomField>
    <fullName>Expense_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor(Expense Account)</label>
    <referenceTo>Expense_Account__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>