force-app/main/default/objects/Employee__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>EXEC</fullName>
            </value>
            <value>
                <fullName>DEV</fullName>
            </value>
            <value>
                <fullName>OPS</fullName>
            </value>
            <value>
                <fullName>BI</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>CUS</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>