force-app/main/default/objects/Employee__c/fields/Is_Quota_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Is_Quota_Applicable__c</fullName>
    <formula>Role__r.Is_Quota_Applicable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Quota Applicable</label>
    <type>Checkbox</type>
</CustomField>