force-app/main/default/objects/Employee__c/fields/Monthly_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Bonus__c</fullName>
    <label>Monthly Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>