force-app/main/default/objects/Employee__c/fields/PayWeek__c.field-meta.xml
<CustomField>
    <fullName>PayWeek__c</fullName>
    <formula>TEXT( Location__r.PayWeek__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay Week Ending Day</label>
    <type>Text</type>
</CustomField>