force-app/main/default/objects/Employee__c/fields/Primary_Currency__c.field-meta.xml
<CustomField>
    <fullName>Primary_Currency__c</fullName>
    <label>Primary Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>