force-app/main/default/objects/Employee__c/fields/Primary_Office__c.field-meta.xml
<CustomField>
    <fullName>Primary_Office__c</fullName>
    <label>Primary Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Austin</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>