force-app/main/default/objects/Employee__c/fields/Which_dates_of_week__c.field-meta.xml
<CustomField>
    <fullName>Which_dates_of_week__c</fullName>
    <formula>IF(INCLUDES( Location__r.Which_dates_of_week__c , &quot;Sunday&quot;), &quot;Sunday&quot;, NULL)  + BR() + 
IF(INCLUDES( Location__r.Which_dates_of_week__c , &quot;Monday&quot;), &quot;Monday&quot;, NULL)  + BR() + 
IF(INCLUDES( Location__r.Which_dates_of_week__c , &quot;Tuesday&quot;), &quot;Tuesday&quot;, NULL) + BR() + 
IF(INCLUDES( Location__r.Which_dates_of_week__c , &quot;Wednesday&quot;), &quot;Wednesday&quot;, NULL) + BR() + 
IF(INCLUDES( Location__r.Which_dates_of_week__c , &quot;Thursday&quot;), &quot;Thursday&quot;, NULL) + BR() + 
IF(INCLUDES( Location__r.Which_dates_of_week__c , &quot;Friday&quot;), &quot;Friday&quot;, NULL) + BR() + 
IF(INCLUDES( Location__r.Which_dates_of_week__c , &quot;Saturday&quot;), &quot;Saturday&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Working Days</label>
    <type>Text</type>
</CustomField>