force-app/main/default/objects/Employee__c/recordTypes/Operations_Employee.recordType-meta.xml
<RecordType>
    <fullName>Operations_Employee</fullName>
    <active>true</active>
    <description/>
    <label>Operations Employee</label>
</RecordType>