force-app/main/default/objects/Employee__c/validationRules/Future_Hire_Employe_With_Past_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Future_Hire_Employe_With_Past_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Employee_Type__c) == &#39;Future Hire&#39;,  Employee_Start_Date__c &lt;  TODAY())</errorConditionFormula>
    <errorMessage>Future employee  start date cannot be past date.</errorMessage>
</ValidationRule>