force-app/main/default/objects/Employee__c/validationRules/Terminated_Employee_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Terminated_Employee_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( TEXT(Employee_Status__c) == &#39;Terminated&#39;, OR( Employee_Start_Date__c &gt; TODAY() ,   ISNULL(Employee_End_Date__c) , ISBLANK(Employee_End_Date__c)) )</errorConditionFormula>
    <errorMessage>Terminated Employee cannot be created with Future Start Date OR without End Date</errorMessage>
</ValidationRule>