force-app/main/default/objects/Employee__c/validationRules/Validate_End_Date_is_after_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_End_Date_is_after_Start_Date</fullName>
    <active>true</active>
    <description>This validation rule ensures that Start Date is always lesser than End Date.</description>
    <errorConditionFormula>AND( 
NOT(ISNULL( Employee_End_Date__c )), 
NOT(ISNULL( Employee_Start_Date__c )), 
(Employee_Start_Date__c &gt; Employee_End_Date__c ) 
)</errorConditionFormula>
    <errorDisplayField>Employee_End_Date__c</errorDisplayField>
    <errorMessage>End Date should be after Start Date.</errorMessage>
</ValidationRule>