force-app/main/default/objects/Employee__c/listViews/Administrative_Employees.listView-meta.xml
<ListView>
    <fullName>Administrative_Employees</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Role__c</columns>
    <columns>Employee_Status__c</columns>
    <columns>Employee_Start_Date__c</columns>
    <columns>Employee_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Role__c</field>
        <operation>equals</operation>
        <value>Accounting Manager,Accountant,Executive Assistant,HR Manager</value>
    </filters>
    <label>Administrative Employees</label>
</ListView>