force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Primary_Office__c</columns>
    <columns>Employee_Type__c</columns>
    <columns>Employee_Start_Date__c</columns>
    <columns>Employee_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>