force-app/main/default/objects/Employee__c/listViews/India_Enginering_Employees.listView-meta.xml
<ListView>
    <fullName>India_Enginering_Employees</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Role__c</columns>
    <columns>Employee_Status__c</columns>
    <columns>Employee_Start_Date__c</columns>
    <columns>Employee_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Role__c</field>
        <operation>equals</operation>
        <value>Product Manager,Product Owner,QA,Architect,Developer,Business Analyst</value>
    </filters>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>India</value>
    </filters>
    <label>India Engineering Employees</label>
</ListView>