force-app/main/default/objects/Employee__c/listViews/Marketing_Employees.listView-meta.xml
<ListView>
    <fullName>Marketing_Employees</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Role__c</columns>
    <columns>Employee_Status__c</columns>
    <columns>Employee_Start_Date__c</columns>
    <columns>Employee_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Role__c</field>
        <operation>equals</operation>
        <value>Marketing Manager</value>
    </filters>
    <label>Marketing Employees</label>
</ListView>